# fulgor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pixi.toml
.github/workflows/: build.yml  codeql.yml  release.yml  test.yml
hooks/: post-merge  pre-commit
include/: GGCAT.hpp  bit_vector.hpp  build_util.hpp  builder.hpp  cluster_builder.hpp  color_list_sketcher.hpp  differential_builder.hpp  filenames.hpp  index.hpp  index_types.hpp  integer_codes.hpp  inverted_index.hpp  inverted_index_builder.hpp  list_sorter.hpp  meta_builder.hpp  meta_differential_builder.hpp  ranked_bit_vector.hpp  sliced_builder.hpp  util.hpp
include/builders/: .repair_builder.hpp.swp  .sliced_builder.hpp.swp  builder.hpp  differential_builder.hpp  meta_builder.hpp  meta_differential_builder.hpp  repair_builder.hpp  sliced_builder.hpp
include/color_classes/: color_classes.hpp  differential.hpp  hybrid.hpp  meta.hpp  meta_differential.hpp
include/color_sets/: .differential.hpp.swp  .sliced.hpp.swp  differential.hpp  hybrid.hpp  meta.hpp  meta_differential.hpp  repair.hpp  sliced.hpp
kallisto_psa/: psa.cpp  psa.hpp
piscem_psa/: CanonicalKmer.hpp  CanonicalKmerIterator.hpp  Kmer.hpp  hit_searcher.cpp  hit_searcher.hpp  projected_hits.hpp
scripts/: 10313-se-serovars.txt  10313-se.txt  build_index.py  cluster_sketches.py
src/: color_sets.cpp  common.cpp  index.cpp  kmer_conservation.cpp  kmer_matches.cpp  ps_full_intersection.cpp  ps_threshold_union.cpp  ps_utils.cpp
src/psa/: full_intersection.cpp  threshold_union.cpp
test_data/: all_shuffled.txt
tests/: intersect_color_sets.cpp
tools/: batched_intersection.cpp  build.cpp  build_index.cpp  check_colors.cpp  fulgor.cpp  ggcat_test.cpp  intersect_colors.cpp  invert.cpp  kmer_conservation.cpp  kmer_matches.cpp  permute.cpp  permute_unitigs.cpp  print_lists_in_cluster.cpp  print_ref_mappings.cpp  pseudoalign.cpp  run_ggcat.cpp  sketch.cpp  sort_unique.cpp  stats.cpp  util.cpp
